--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ kramdown:
 
 permalink: /blog/:title/
 
+description: Convox is the easiest way to deploy your application to the cloud
+
 collections:
   introduction:
     title: Introduction
