fix migration url

--- a/_config/convox.conf
+++ b/_config/convox.conf
@@ -71,7 +71,7 @@ location /docs/docs/support                                                 { re
 location /docs/docs/troubleshooting-apps                                    { return 301 https://$server_name/docs/troubleshooting/ ; }
 location /docs/docs/troubleshooting-install                                 { return 301 https://$server_name/docs/troubleshooting/ ; }
 location /docs/docs/updating-convox                                         { return 301 https://$server_name/docs/installing-a-rack/ ; }
-location /guide/heroku                                                      { return 301 https://docs.convox.com/guides/heroku ; }
+location /guide/heroku                                                      { return 301 https://docs.convox.com/migration/heroku ; }
 location /privacy                                                           { return 301 https://$server_name/legal/privacy ; }
 location /install                                                           { return 301 https://$server_name/docs/installation/ ; }
 
