add macos alias for cli download

--- a/_config/convox.conf
+++ b/_config/convox.conf
@@ -9,6 +9,7 @@ location /signup { return 301 https://console.convox.com/grid/signup ; }
 
 # cli download
 location /cli/linux/convox       { return 301 https://convox.s3.amazonaws.com/cli/linux/convox ; }
+location /cli/macos/convox       { return 301 https://convox.s3.amazonaws.com/cli/darwin/convox ; }
 location /cli/osx/convox         { return 301 https://convox.s3.amazonaws.com/cli/darwin/convox ; }
 location /cli/windows/convox.exe { return 301 https://convox.s3.amazonaws.com/cli/windows/convox.exe ; }
 
