changes from review

--- a/_config/convox.conf
+++ b/_config/convox.conf
@@ -80,3 +80,7 @@ location /install                                                           { re
 location ~* ^/docs/(.*)$ {
   return 301 https://docs.convox.com/$1;
 }
+
+# redirects for K8s beta signup form
+location /k8s           { return 301 https://goo.gl/forms/3n0ejrzPgr7WkIU92 ; }
+location /kubernetes    { return 301 https://goo.gl/forms/3n0ejrzPgr7WkIU92 ; }
