--- a/convox.yml
+++ b/convox.yml
@@ -3,7 +3,7 @@ services:
     command: _bin/web
     domain: ${HOST}
     environment:
-      - CONSOLE_HOST=
+      - CONSOLE_HOST
       - DEVELOPMENT=false
-      - SEGMENT_TOKEN=
+      - SEGMENT_TOKEN
     port: 4001
