--- a/convox.yml
+++ b/convox.yml
@@ -4,6 +4,7 @@ services:
     domain: ${DOMAIN}
     environment:
       - DEVELOPMENT=false
+      - SEGMENT_TOKEN
     health:
       path: /check
       interval: 30
