--- a/convox.yml
+++ b/convox.yml
@@ -3,9 +3,6 @@ services:
     build: .
     domain: ${DOMAIN}
     environment:
-      - DEVELOPMENT=false
       - SEGMENT_TOKEN
-    health:
-      path: /check
-      interval: 30
+    health: /check
     port: https:3000
